<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectTitle"
        android:textSize="30dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textBoxIPAddress"
        android:inputType="text"
        android:hint="@string/ipAddressInstruction"
        android:textSize="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textBoxPort"
        android:inputType="text"
        android:hint="@string/portInstruction"
        android:textSize="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonConnect"
        android:text="@string/connectButton"
        android:onClick="ButtonConnectToServer"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textBoxStringToSend"
        android:hint="@string/textBoxStringToSend"
        android:paddingTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSendString"
        android:text="@string/buttonSendString"
        android:onClick="ButtonSendString"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/textViewReceivedString"/>

</LinearLayout>